# SurflieModel

./: .env.example  .gitignore  BUOY_IMPLEMENTATION.md  CLAUDE.md  DATA_DESTRUCTION_CERTIFICATE.md  PRINT  README.md  analyse_accuracy.ipynb  history_loader.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_buoy.py
.claude/: settings.json
.claude/hooks/: format-python.sh  validate-json.sh
.github/workflows/: README.md  deploy-web.yml  scheduled-data-fetch.yml  test.yml
apps/mobile/: README.md  app.config.ts  app.json  metro.config.js  package.json
apps/web/: README.md  next.config.js  package.json  tailwind.config.ts
backend/api/: README.md  pyproject.toml  requirements.txt
backend/worker/: README.md  requirements.txt  scheduler.py
data/: README.md  download_weather_data.py  metadata.db
data/analysis/: README.md  analyze_bathymetry.py  analyze_forecast_accuracy.py  requirements.txt  visualize_ww3_coverage.py
data/bathymetry/: __init__.py  gebco.py  ncei_crm.py  noaa_topobathy.py  usace_lidar.py
data/meshes/: generate_mesh.py
data/notebooks/: README.md
data/pipelines/: requirements.txt
data/regions/: __init__.py  mesh.py  (+1 more)
docs/: architecture.md  claude.md  deployment.md  surfzone_wave_simulation_approach.md
ml/: README.md
ml/inference/: README.md  __init__.py  predictor.py  pyproject.toml  utils.py
regions/: CLAUDE.md
runs/: __init__.py  fetch_ww3.py  run_swan.py
scripts/: dev.sh  fetch_historical_wind.py  generate_surfzone_mesh.py  generate_surfzone_mesh_noaa.py  merge_statistics.py  plot_regions.py  setup.sh
(+159 files in other folders)
