[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-forecast-inference"
version = "0.1.0"
description = "Production inference for wave forecast models"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.4",
    "scikit-learn>=1.4.0",
    "boto3>=1.34.0",  # For S3 model loading
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wave_forecast_inference*"]
